# PodCodex

./: .claudeignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  pyproject.toml  server_config.json
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
deploy/: .env.example  BOT.md  BUILD.md  Dockerfile  MCP.md  MULTI_SHOW.md  PASCAL.md  SMOKE.md  docker-compose.yml  shows.example.toml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: theme-init.js
frontend/src/: fontsource.d.ts  index.css  main.tsx  router.tsx
frontend/src/api/: base.ts  botAccess.ts  bundle.ts  client.ts  config.ts  correct.ts  episodes.ts  filesystem.ts  generated-types.ts  gpu.ts  health.ts  integrations.ts  keys.ts  mcpPrompts.ts  polish.ts  providerProfiles.ts  queryKeys.ts  search.ts  segments.ts  shows.ts  synthesize.ts  transcribe.ts  translate.ts  types.ts  versions.ts
frontend/src/components/: BatchHistoryModal.tsx  CommandPalette.tsx  OnboardingModal.tsx  ShortcutsHelp.tsx
frontend/src/components/common/: AdvancedToggle.tsx  DownloadDropdown.tsx  DropOverlay.tsx  FolderLocationFields.tsx  FolderPicker.tsx  FormGrid.tsx  HelpIcon.tsx  HelpLabel.tsx  InlineConfirm.tsx  LLMControls.tsx  LLMControlsForm.tsx  LanguageChipRack.tsx  ManualModePanel.tsx  MissingDependency.tsx  PanelLoading.tsx  PipelinePanel.tsx  PipelineRunFooter.tsx  PresetCards.tsx  SectionHeader.tsx  Segmented.tsx  StaleUpdatedLabel.tsx
frontend/src/components/correct/: CorrectPanel.tsx
frontend/src/components/editor/: EditorToolbar.tsx  Pagination.tsx  ProgressBar.tsx  ReadOnlyTranscript.tsx  SegmentEditor.tsx  SegmentRow.tsx  SpeakerStrip.tsx  TranscriptViewer.tsx
frontend/src/components/episode/: OutputGroup.tsx  PipelineSteps.tsx  VersionRow.tsx
frontend/src/components/index/: IndexInspectorModal.tsx  IndexPanel.tsx
frontend/src/components/layout/: AppSidebar.tsx  AudioBar.tsx  BackNav.tsx  EditorialHeader.tsx  PageHeader.tsx  TaskBar.tsx  Waveform.tsx
frontend/src/components/polish/: PolishPanel.tsx
frontend/src/components/search/: SearchPanel.tsx  SearchResultCard.tsx  SegmentContextDialog.tsx
frontend/src/components/settings/: BundleExportPanel.tsx  ClaudeDesktopPanel.tsx  GPUBackendPanel.tsx  IntegrationCard.tsx  IntegrationsPanel.tsx  PromptEditorModal.tsx
frontend/src/components/show/: ShowCard.tsx  (+20 more)
frontend/src/hooks/: useActiveTask.ts  useApiKeys.ts  useCapabilities.ts  useDropZone.ts  useGlobalShortcuts.ts  useLLMPipeline.ts  useLLMProviders.ts  usePipelineConfig.ts  usePipelineTask.ts  useProgress.ts  useProviderProfiles.ts  useSegmentFiltering.ts  useSegments.ts  useShowActions.ts  useTauriFileDrop.ts  useTheme.ts
frontend/src/lib/: batchUtils.ts  diffUtils.ts  highlight.tsx  pipelineInputs.ts  providerModels.ts  segKey.ts  speakerColor.ts  standaloneEpisode.ts  stepStatus.ts  utils.ts
frontend/src/pages/: EpisodePage.tsx  HomePage.tsx  RootLayout.tsx  SettingsPage.tsx  ShowPage.tsx
frontend/src/platform/: PlatformContext.tsx  index.ts  isTauri.ts  tauri.ts  types.ts  web.ts
frontend/src/store/: index.ts
frontend/src/stores/: audioStore.ts  batchHistoryStore.ts  configStore.ts  episodeStore.ts  flagPatternsStore.ts  index.ts  layoutStore.ts  onboardingStore.ts  pipelineConfigStore.ts  searchStore.ts  taskStore.ts
packaging/: build_server.py  package_gpu.py  podcodex-server.spec
packaging/pyi_av_stub/av/: __init__.py  logging.py
packaging/pyi_hooks/: hook-av.py  pyi_rth_aaa_anaconda_sysver.py  pyi_rth_numpy_compat.py  pyi_rth_torch_compiler_disable.py
scripts/: backfill_episode_meta.py  fetch_native_binaries.py  generate_types.py  setup_dev_sidecar.py  sign_and_notarize.sh
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/podcodex/: __init__.py  bootstrap.py  cli.py
src/podcodex/api/: __init__.py  app.py  gpu_backend.py  schemas.py  server.py  subprocess_runner.py  tasks.py
src/podcodex/bot/: bot.py  config.py  formatting.py  synthesis.py  ui.py
src/podcodex/bundle/: __init__.py  conflicts.py  export.py  import_show.py  manifest.py
src/podcodex/cli/: __init__.py  export.py  import_show.py  resolve.py
src/podcodex/core/: __init__.py  _ffmpeg.py  _hf_logging.py  _paths.py  _utils.py  api_keys.py  app_paths.py  cache.py  constants.py  correct.py  device.py  llm_resolver.py  pipeline_db.py  polish.py  provider_profiles.py  recovery.py  synthesize.py  synthesize_job.py  transcribe.py  transcribe_job.py  translate.py  user_settings.py  versions.py
src/podcodex/ingest/: folder.py  importer.py  rss.py  show.py  youtube.py
src/podcodex/mcp/: __init__.py  prompts.py  server.py
src/podcodex/rag/: __init__.py  chunker.py  cli.py  defaults.py  embedder.py  index_job.py  index_store.py  indexing.py  localstore.py  reindex.py  retriever.py  store.py
streamlit/: app.py  constants.py  show_app.py  streamlit_editor.py  streamlit_index.py  streamlit_polish.py  streamlit_rag.py  streamlit_search.py  streamlit_synthesize.py  streamlit_transcribe.py  streamlit_translate.py  utils.py
tests/: test_api.py  test_api_keys.py  test_approx_substring.py  test_bootstrap_device_override.py  test_bot.py  test_bot_access.py  test_bundle.py  test_chunker.py  test_claude_desktop_config.py  test_cli.py  test_correct.py  test_device.py  test_embedder.py  test_importer.py  test_index_store.py  test_indexing.py  test_ingest.py  test_llm_resolver.py  test_localstore.py  test_mcp.py  test_mcp_prompts.py  test_pipeline_db.py  test_polish.py  test_provider_profiles.py  test_recovery.py  test_retriever.py  test_route_system_device.py  test_rss.py  test_show.py  test_store.py  test_subprocess_runner.py  test_synthesize.py  test_transcribe.py  test_translate.py  test_user_settings.py  test_utils.py  test_validate.py  test_versions.py
tests/fixtures/: subprocess_jobs.py
(+50 files in other folders)
