[project]
name = "podcodex"
version = "0.1.0"
description = "AI tools for podcast production"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gabriel Jung", email = "gabriel.jung@protonmail.com" }]
requires-python = ">=3.12, <3.13"
keywords = ["podcast", "transcription", "diarization", "translation", "tts", "voice-cloning", "whisperx", "speech-to-text"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "feedparser>=6.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
bot = [
    "discord.py>=2.5.0",
]
app = [
    "streamlit>=1.55.0",
]
desktop = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
]
rag = [
    "bm25s>=0.2.0",
    "chonkie>=0.5.0",
    "flagembedding>=1.3.5",
    "numpy>=1.26",
    "sentence-transformers>=5.2.3",
    "torch>=2.3.0",
    "transformers>=4.40,<5",
]
pipeline = [
    "accelerate>=1.12.0",
    "ollama>=0.6.1",
    "openai>=2.23.0",
    "pandas>=2.0.0",
    "pyannote-audio>=4.0.4",
    "pyarrow>=23.0.0",
    "qwen-tts>=0.1.1",
    "soundfile>=0.13.1",
    "whisperx>=3.8.1",
]

[project.scripts]
podcodex     = "podcodex.cli:main"
podcodex-bot = "podcodex.bot.bot:main"
podcodex-api = "podcodex.api.app:main"

[project.urls]
Homepage = "https://github.com/gabriel-jung/podcodex"
Repository = "https://github.com/gabriel-jung/podcodex"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbstripout>=0.9.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
