[project]
name = "podcodex"
version = "0.1.12"
description = "AI tools for podcast production"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gabriel Jung", email = "gabriel.jung@protonmail.com" }]
requires-python = ">=3.12, <3.13"
keywords = ["podcast", "transcription", "diarization", "translation", "tts", "voice-cloning", "whisperx", "speech-to-text"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "feedparser>=6.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
bot = [
    "discord.py>=2.5.0",
]
mcp = [
    "mcp>=1.2.0",        # stdio server for Claude Desktop / Claude Code
]
desktop = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "mcp>=1.2.0",
]
rag = [
    "chonkie>=0.5.0",
    "flagembedding>=1.3.5",
    "lancedb>=0.30.0",
    "numpy>=1.26",
    "sentence-transformers>=5.2.3,<5.4.0",
    # 2.6 is the floor for transformers' or_mask_function / and_mask_function
    # ops — the Perplexity embedder triggers that path and dies on older torch.
    "torch>=2.6",
    "transformers>=4.40,<5",
]
youtube = [
    "yt-dlp>=2024.0",
]
pipeline = [
    "accelerate>=1.12.0",
    "ollama>=0.6.1",
    "openai>=2.23.0",
    "pandas>=2.0.0",
    "pyannote-audio>=4.0.4",
    "pyarrow>=23.0.0",
    "qwen-tts>=0.1.1",
    "soundfile>=0.13.1",
    "whisperx>=3.8.1",
]

[project.scripts]
podcodex-bot = "podcodex.bot.bot:main"
podcodex-api = "podcodex.api.app:main"
podcodex-mcp = "podcodex.mcp.server:main"
podcodex-reindex = "podcodex.rag.reindex:main"
podcodex-export = "podcodex.cli.export:main"
podcodex-import = "podcodex.cli.import_show:main"

[project.urls]
Homepage = "https://github.com/gabriel-jung/podcodex"
Repository = "https://github.com/gabriel-jung/podcodex"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbstripout>=0.9.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
