[project]
name = "podcodex"
version = "0.1.22"
description = "AI tools for podcast production"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gabriel Jung", email = "gabriel.jung@protonmail.com" }]
requires-python = ">=3.12, <3.13"
keywords = ["podcast", "transcription", "diarization", "translation", "tts", "voice-cloning", "whisperx", "speech-to-text"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "feedparser>=6.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
bot = [
    "discord.py>=2.5.0",
]
mcp = [
    "mcp>=1.2.0",        # stdio server for Claude Desktop / Claude Code
]
desktop = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "mcp>=1.2.0",
]
rag = [
    "chonkie>=0.5.0",
    "flagembedding>=1.3.5",
    "lancedb>=0.30.0",
    "numpy>=1.26",
    "sentence-transformers>=5.2.3,<5.4.0",
    # 2.6 is the floor for transformers' or_mask_function / and_mask_function
    # ops — the Perplexity embedder triggers that path and dies on older torch.
    "torch>=2.6",
    "transformers>=4.40,<5",
]
youtube = [
    "yt-dlp>=2024.0",
]
pipeline = [
    "accelerate>=1.12.0",
    "ollama>=0.6.1",
    "openai>=2.23.0",
    "pandas>=2.0.0",
    "pyannote-audio>=4.0.4",
    "pyarrow>=23.0.0",
    "qwen-tts>=0.1.1",
    "soundfile>=0.13.1",
    "whisperx>=3.8.1",
]
# Modern NVIDIA wheel (Turing through Blackwell). Default for new installs.
gpu = [
    "torch>=2.8",
    "torchaudio>=2.8",
]
# Pascal-only wheel (GTX 10xx, Titan Xp, P40, P100). PyTorch 2.10 is
# expected to drop sm_61 entirely; this extra is frozen at 2.9.x and
# will be removed when the baseline crosses that line.
# See deploy/PASCAL.md for the full install path and verification steps.
gpu-pascal = [
    "torch>=2.8,<2.10",
    "torchaudio>=2.8,<2.10",
]

[project.scripts]
podcodex-bot = "podcodex.bot.bot:main"
podcodex-api = "podcodex.api.app:main"
podcodex-mcp = "podcodex.mcp.server:main"
podcodex-reindex = "podcodex.rag.reindex:main"
podcodex-export = "podcodex.cli.export:main"
podcodex-import = "podcodex.cli.import_show:main"

[project.urls]
Homepage = "https://github.com/gabriel-jung/podcodex"
Repository = "https://github.com/gabriel-jung/podcodex"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbstripout>=0.9.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ──────────────────────────────────────────────────────────────────────
# Torch wheel routing (uv extras → PyTorch CUDA index)
#
# Default (no extra): uv resolves torch from PyPI — CPU wheel on
# Linux/Windows, MPS-capable wheel on macOS. Works for dev, CI, CPU bundles.
#
#   uv sync --extra pipeline --extra gpu          → cu128 (Turing+)
#   uv sync --extra pipeline --extra gpu-pascal   → cu126 (Pascal)
#
# These two extras are mutually exclusive — never enable both at once.
# ──────────────────────────────────────────────────────────────────────

[tool.uv]
conflicts = [
    [
        { extra = "gpu" },
        { extra = "gpu-pascal" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "gpu" },
    { index = "pytorch-cu126", extra = "gpu-pascal" },
]
torchaudio = [
    { index = "pytorch-cu128", extra = "gpu" },
    { index = "pytorch-cu126", extra = "gpu-pascal" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
