[package]
name = "podcodex-app"
version = "0.1.0"
description = "PodCodex desktop app"
authors = ["Gabriel Jung"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# Stack pinned to a tested-known-good combo. Loosen once a CI matrix
# covers the full Tauri release surface.
tauri = { version = "=2.9.5", features = ["macos-private-api"] }
tauri-runtime = "=2.9.2"
tauri-runtime-wry = "=2.9.3"
tao = "=0.34.5"
wry = "=0.53.5"
tauri-plugin-log = "=2.7.0"
tauri-plugin-shell = "=2.3.4"
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-window-state = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time", "macros"] }
